fixed maven setup, added profile for 25, updated google-format